--- a/css/style.css
+++ b/css/style.css
@@ -4,99 +4,61 @@ body {
     font-family: Roboto, sans-serif;
     font-weight: 400;
     font-size: 14px;
-}
-
-.container {
-    max-width: 1000px;
-}
-
-
-.sidebar-menu {
-
-}
-
-.sidebar-container {
-    width: 300px;
-    height: 2240px;
-    background-color: #202020;
-}
-/* ---------------Как сделать прозрачный фон и почему нет бэкгроунд img?*/
-.avatar {
-    width: 100px;
-    height: 100px;
-    margin-top: 100px;
-    margin-left: 100px;
-  background-image: url("css/images/desctop.png");
-    margin-bottom:19px ;
-}
-
-.sidebar-content h4 {
-    font-size: 18px;
-    line-height: 1.2;
-    text-align: center;
-    color: white;
-    margin-bottom: 3px;
-}
-
-.sidebar-content h3 {
-    font-weight: 300;
-    font-size: 14px;
-    line-height: 1.2;
-    text-align: center;
-    color:#DEDEDE ;
-    margin-bottom: 17px;
-}
-
-.sidebar-links {
-    width: 195px;
-    margin: 0 auto;
-}
-
-.sidebar-links ul {
-
+    height: 100vh;
     display: flex;
-    justify-content:space-between;
-    align-items: center;
-
-}
-.sidebar-links li {
-    padding: 0 15px;
-    margin-bottom: 60px;
-
+    justify-content: center;
+    background-color: #251b1b;
 }
 
-p {
-    margin-bottom: 60px;
-    padding: 0 20px;
-    font-size: 12px;
-    line-height: 1.5;
-    text-align: center;
-    color: white;
+.root-container {
+    display: flex;
+    width: 1000px;
+    height: inherit;
 }
 
-.sidebar-btn {
-   width: 260px;
+
+.header-nav {
+    background-color: #0D0D0D;
     display: flex;
     justify-content: space-between;
 }
 
-.left-btn {
-    margin-left: 25px;
-    border-radius: 25px;
-    height:40px;
-    width: 120px;
-    font-size: 12px;
-    text-align: center;
-    background-color:#ED3024 ;
+.header-links > ul {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+    .sidebar-links-li {
+        padding: 14px 14px;
+        min-inline-size: max-content;
+    }
+
+
+
+.header-links a {
+    text-decoration: none;
+    font-size: 11px;
+    line-height: 1.2;
+    text-transform: uppercase;
     color: white;
 }
 
-.right-btn {
-    margin-left: 25px;
-    border-radius: 25px;
-    height:40px;
-    width: 120px;
-    font-size: 12px;
-    text-align: center;
-    background-color:#3137C9 ;
-    color: white;
+.prof-links {
+    margin-left: 100px;
+}
+
+.nav-input input {
+    width: 212px;
+    height: 40px;
+    background-color: #202020;
+    border: none;
+}
+
+.main-container {
+    background-color: #181818;
+    height: 100%;
+}
+
+
+/*запуталась в родительских контейнерах */
