--- a/css/main.css
+++ b/css/main.css
@@ -159,3 +159,12 @@ body {
     text-decoration: none;
     color: #3137C9;
 }
+
+
+/*<------SideBar не вытягивается по всей странице*/
+/* Инпут забыла как убрать рамку, сделать отступ между ним и слово профиль*/
+/* засунуть кнопки в инпут так и не дошло*/
+/*текст параграфа топорно выглядит и не могу сделать как на макете*/
+/*отступ между li и текстом слишком большой*/
+/* все секции выходят из берегов и не держат контейнер */
+/*оставить комментарий непонятно где и не знаю когда вернется*/
