--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet");
+
+
 body {
     font-family: Roboto, sans-serif;
     font-weight: 400;
+    height: fit-content;
     font-size: 14px;
-    height: 100vh;
     display: flex;
     justify-content: center;
     background-color: #251b1b;
@@ -17,13 +19,15 @@ body {
 
 .main-container {
     display: flex;
+    justify-content: space-between;
+    padding: 60px 50px;
     background-color: #181818;
-    height: 100%;
+
 }
 
-.picture-container {
-    padding: 50px 8px;
-    margin-bottom: 30px;
+.main-section {
+    padding: 30px 50px;
+    /*background-color: #202020;*/
 }
 
 .pic2-3 {
@@ -40,7 +44,7 @@ body {
 
 .main-input-container {
     flex-grow: 1;
-    width: 600px;
+    /*width: 600px;*/
     height: 74px;
     background-color: #121212;
    padding: 0 8px;
