--- a/css/regform.css
+++ b/css/regform.css
@@ -13,7 +13,7 @@
     padding: 0 15px;
 }
 
-.mb-3 {
+.registration-wrap {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -60,12 +60,16 @@ font-family: Roboto,sans-serif;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    background-color: #181818;
+    gap: 16px;
+
 }
 
 .btn-form-wrapper {
     display: flex;
     justify-content: center;
     margin-top: 20px;
+
 }
 
 
@@ -78,7 +82,7 @@ font-family: Roboto,sans-serif;
     outline-offset: 0;
 }
 
-.mb-3:after {
+.registration-wrap:after {
     content: "";
     position: absolute;
     bottom: -10px;
